--- a/MoinMoin/themes/basic/templates/diff.html
+++ b/MoinMoin/themes/basic/templates/diff.html
@@ -7,6 +7,9 @@
 
 {% block content %}
 {% block headline %}
+<i class="icon-chevron-sign-left">
+	<a href="{{ url_for('frontend.history', item_name=item_name) }}"> Back </a> 
+</i>
 <h2>{{ _("Diff for '%(item_name)s'", item_name=newrev.item.name) }}</h2>
 {% endblock %}
 {{ diff_html }}
