fix for rendering checkboxes properly

--- a/MoinMoin/themes/basic/templates/usersettings_forms.html
+++ b/MoinMoin/themes/basic/templates/usersettings_forms.html
@@ -131,7 +131,7 @@
         'show_comments',
         'disabled'
         ] %}
-        <div class="form-group">
+        <div class="checkbox">
             <label>
                 {{ gen.input(form[e], type="checkbox") }}
                 {{ form[e].label }}
