adds div to modify view to check if modify view, instead of checking the URL

--- a/MoinMoin/themes/basic/templates/modify.html
+++ b/MoinMoin/themes/basic/templates/modify.html
@@ -14,6 +14,7 @@
 {% block content %}
 <h2>{{ title }}</h2>
 <div id="moin-modify" class="moin-form">
+    <div id="checkmodifyview"> </div>
     {{ gen.form.open(form, method='post', enctype='multipart/form-data') }}
     {{ forms.render_errors(form) }}
     {#
