moves comment and transclusions buttons into the user actions panel

--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -1,5 +1,21 @@
 @import "bootstrap.less";
 
+.moin-user-action-special {
+  .list-group-item;
+  width: 100%;
+  color: @link-color;
+  &:hover,
+  &:focus,
+  &:active,
+  &.active {
+    color: @link-hover-color;
+    background-color: @list-group-hover-bg;
+    border: 1px solid @list-group-border;
+  }
+  border: 1px solid @list-group-border;
+  border-radius: 0;
+}
+
 .moin-diff-added {
   background-color: @moin-diff-added;
 }
