--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4208,6 +4208,38 @@ td.visible-print {
     display: none !important;
   }
 }
+.moin-user-action-special {
+  position: relative;
+  display: block;
+  padding: 10px 30px 10px 15px;
+  margin-bottom: -1px;
+  background-color: #ffffff;
+  width: 100%;
+  color: #428bca;
+  border: 1px solid #dddddd;
+  border-radius: 0;
+}
+.moin-user-action-special:first-child {
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+.moin-user-action-special:last-child {
+  margin-bottom: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.moin-user-action-special > .badge {
+  float: right;
+  margin-right: -15px;
+}
+.moin-user-action-special:hover,
+.moin-user-action-special:focus,
+.moin-user-action-special:active,
+.moin-user-action-special.active {
+  color: #2a6496;
+  background-color: #f5f5f5;
+  border: 1px solid #dddddd;
+}
 .moin-diff-added {
   background-color: #ccffcc;
 }
