finalised position for comments and transclusion toggles and their rendering

--- a/MoinMoin/themes/basic/templates/show.html
+++ b/MoinMoin/themes/basic/templates/show.html
@@ -52,16 +52,26 @@
         {{ self.user_actions() }}
             
         {{ self.item_navigation() }}
-            <button type="button" class="btn btn-default moin-user-action-special moin-toggle-comments-button" data-toggle="button">
-                <span class="pull-left"><i class="icon-comment icon-fixed-width"></i>
-                    Comments 
-                </span>
-            </button>
-            <button type="button" class="btn btn-default moin-user-action-special moin-transclusions-button" data-toggle="button">
-                <span class="pull-left"><i class="icon-edit icon-fixed-width"></i>
-                    Transclusions
-                </span>
-            </button>
+
+        <div class="list-group-item">View Options</div>
+        <button type="button" 
+                class="btn btn-default moin-user-action-special moin-toggle-comments-button" 
+                data-toggle="button"
+                title="Show Comments">
+            <span class="pull-left">
+                <i class="icon-comment icon-fixed-width"></i>
+                Comments 
+            </span>
+        </button>
+        <button type="button" 
+                class="btn btn-default moin-user-action-special moin-transclusions-button" 
+                data-toggle="button"
+                title="Show Transclusions">
+            <span class="pull-left">
+                <i class="icon-edit icon-fixed-width"></i>
+                Transclusions
+            </span>
+        </button>
 
         {{ self.item_actions() }}
     </div>
