--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -1,5 +1,25 @@
 @import "bootstrap.less";
 
+.moin-flash {
+  .alert;
+}
+
+.moin-flash-hint {
+  .alert-success;
+}
+
+.moin-flash-info {
+  .alert-info;
+}
+
+.moin-flash-warning {
+  .alert-danger;
+}
+
+.moin-flash-error {
+  .alert-danger;
+}
+
 .moin-user-action-special {
   .list-group-item;
   width: 100%;
