--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4240,10 +4240,17 @@ td.visible-print {
 .moin-flash > p + p {
   margin-top: 5px;
 }
+.moin-flash > a {
+  font-weight: bold;
+  color: #a47e3c;
+}
 .moin-flash-hint {
   background-color: #dff0d8;
   border-color: #d6e9c6;
   color: #468847;
+}
+.moin-flash-hint > a {
+  color: #356635;
 }
 .moin-flash-hint hr {
   border-top-color: #c9e2b3;
@@ -4256,31 +4263,30 @@ td.visible-print {
   border-color: #bce8f1;
   color: #3a87ad;
 }
+.moin-flash-info > a {
+  color: #2d6987;
+}
 .moin-flash-info hr {
   border-top-color: #a6e1ec;
 }
 .moin-flash-info .alert-link {
   color: #2d6987;
 }
-.moin-flash-warning {
-  background-color: #f2dede;
-  border-color: #eed3d7;
-  color: #b94a48;
-}
-.moin-flash-warning hr {
-  border-top-color: #e6c1c7;
-}
-.moin-flash-warning .alert-link {
-  color: #953b39;
-}
+.moin-flash-warning,
 .moin-flash-error {
   background-color: #f2dede;
   border-color: #eed3d7;
   color: #b94a48;
 }
+.moin-flash-warning > a,
+.moin-flash-error > a {
+  color: #953b39;
+}
+.moin-flash-warning hr,
 .moin-flash-error hr {
   border-top-color: #e6c1c7;
 }
+.moin-flash-warning .alert-link,
 .moin-flash-error .alert-link {
   color: #953b39;
 }
