--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -101,12 +101,15 @@
 
         <div class="row">
             <div class="col-lg-12">
+                {# id -> moin-flash is used to add special alerts for ex. for changes to User Settings via JS, see common.js #}
+                <div id="moin-flash"> 
                     {% for category, msg in get_flashed_messages(with_categories=true) %}
                     <div class="moin-flash moin-flash-{{ category }}">
-                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                         {{ msg }}
+                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                     </div>
                     {% endfor %}
+                </div>
             </div>
         </div>
 
