fixes display of item actions heading with a nonexistent item

--- a/MoinMoin/themes/basic/templates/show.html
+++ b/MoinMoin/themes/basic/templates/show.html
@@ -55,9 +55,11 @@
                 Transclusions
             </span>
         </button>
-                    
-        <div class="list-group-item"> {{ _("Item Actions") }} </div>
-        {{ self.item_actions() }}
+         
+        {% if item_actions %}           
+            <div class="list-group-item"> {{ _("Item Actions") }} </div>
+            {{ self.item_actions() }}
+        {% endif %}
     </div>
 
 {% endblock %}
