--- a/MoinMoin/templates/modify.html
+++ b/MoinMoin/templates/modify.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block subitem_navigation %}
-    {% call(fullname, shortname, contenttype, has_children) utils.render_subitem_navigation(item_name, True) %}
+    {% call(fullname, shortname, contenttype, has_children) utils.render_subitem_navigation(fqname, True) %}
         {% set shortname = shortname|json_dumps %}
         {% set fullname = fullname|json_dumps %}
         <button class="moin-insertname-action" onclick='InsertName({{ fullname }})'
