--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -115,36 +115,49 @@
 
         <div class="row">
             <div class="col-lg-2">
-                <div class="moin-sidebar">
-                    {% set navibar_items = theme_supp.navibar(item_name) %}
-                    {% set quicklinks = 'false' %}
-                    {% if navibar_items %}
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="moin-sidebar">
+                            {% set navibar_items = theme_supp.navibar(item_name) %}
+                            {% set quicklinks = 'false' %}
+                            {% if navibar_items %}
 
-                    <div class="list-group-item"> {{ _("Site Navigation") }} </div>
-                    {% for cls, url, text, title in navibar_items if cls != 'userlink' %}
-                        <a class="list-group-item {{ cls }}{% if url == current_url %} active{% endif %}" href="{{ url }}" {% if title %}title="{{ title }}"{% endif %}>{{ text|shorten_item_name }}</a>
-                    {% endfor %}
-                    
-                    {% if item_navigation %}
-                    <div class="list-group-item"> {{ _("Supplementation") }} </div>
-                    {{ local_panel_main(item_navigation) }}
-                    {% endif %}
+                            <div class="list-group-item"> {{ _("Site Navigation") }} </div>
+                            {% for cls, url, text, title in navibar_items if cls != 'userlink' %}
+                                <a class="list-group-item {{ cls }}{% if url == current_url %} active{% endif %}" href="{{ url }}" {% if title %}title="{{ title }}"{% endif %}>{{ text|shorten_item_name }}</a>
+                            {% endfor %}
+                            
+                            {% if item_navigation %}
+                            <div class="list-group-item"> {{ _("Supplementation") }} </div>
+                            {{ local_panel_main(item_navigation) }}
+                            {% endif %}
 
-                    {% endif %}
-                    
-                    {% for cls, url, text, title in navibar_items if cls == 'userlink' %}
-                        {% if loop.first %}
-                            <div class="list-group-item">Quick Links</div>
-                        {% endif %}
-                            <div class="moin-quicklink">
-                            <a class="moin-quicklink-label {{ cls }}" href="{{ url }}" {% if title %}title="{{ title }}"{% endif %}>{{ text|shorten_item_name }}
-                            </a>
-                            <a class="moin-quicklink-delete" href="{{ url_for('frontend.quicklink_item', item_name=text) }}"> 
-                                <i class="icon-remove"></i>
-                            </a>
+                            {% endif %}
+                            
+                            {% for cls, url, text, title in navibar_items if cls == 'userlink' %}
+                                {% if loop.first %}
+                                    <div class="list-group-item">Quick Links</div>
+                                {% endif %}
+                                    <div class="moin-quicklink">
+                                    <a class="moin-quicklink-label {{ cls }}" href="{{ url }}" {% if title %}title="{{ title }}"{% endif %}>{{ text|shorten_item_name }}
+                                    </a>
+                                    <a class="moin-quicklink-delete" href="{{ url_for('frontend.quicklink_item', item_name=text) }}"> 
+                                        <i class="icon-remove"></i>
+                                    </a>
+                                </div>
+                            {% endfor %}
                         </div>
-                    {% endfor %}
-                </div>
+                    </div>
+                </div><!--first row of sidebar-->
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        {% if self.local_panel %}
+                            {{ self.local_panel() }}
+                        {% endif %}
+                    </div>
+                </div><!--second row of sidebar-->
+
             </div><!--/span-->
 
             <div class="col-lg-10">
@@ -198,9 +211,6 @@
 
             <div class="row">
                 {% set width = "col-lg-12" %}
-                {% if self.local_panel %}
-                    {% set width = "col-lg-10" %}
-                {% endif %}
 
                 <div class="{{width}}">
                     {% set content_id = self.local_panel and 'moin-content' or 'moin-content-no-panel' %}
@@ -210,13 +220,6 @@
                         {% endblock %}
                     </div>
                 </div><!--/span-->
-
-                {% if self.local_panel %}
-                    <div class="col-lg-2">
-                        {{ self.local_panel() }}
-                    </div><!--/span-->
-                {% endif %}
-
             </div><!--/row-->
 
             </div><!--/span-->
