--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -1,5 +1,9 @@
 @import "bootstrap.less";
 
+.moin-list-heading {
+  background-color: darken(@panel-heading-bg,10%);
+}
+
 .moin-flash {
   .alert;
   &>a {
