Implements #33, new arrange of elements

--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -1,5 +1,11 @@
 @import "bootstrap.less";
 
+.moin-logo {
+  .text-center;
+  position: relative;
+  padding-top: 20px;
+}
+
 .moin-list-heading {
   background-color: darken(@panel-heading-bg,10%);
 }
