--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4208,6 +4208,11 @@ td.visible-print {
     display: none !important;
   }
 }
+.moin-logo {
+  text-align: center;
+  position: relative;
+  padding-top: 20px;
+}
 .moin-list-heading {
   background-color: #dcdcdc;
 }
