--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -33,16 +33,18 @@
 {% block layout %}
 	<div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <div class="navbar moin-navbar-inverse">
-                    <div class="col-lg-2">
-                        {% if logo %}
-                        <a class="navbar-brand" href="{{ url_for('frontend.show_item', item_name=cfg.item_root) }}">
-                            <img class="img-circle" src="{{ '/static/logos/moinmoin-small.png' }}"/>
-                        </a>
-                        {% endif %}
-                    </div> <!-- sub-col-lg2 sitelogo-->
-                    <div class="col-lg-7">
+            <div class="col-lg-2 moin-logo">
+                {% if logo %}
+                <a href="{{ url_for('frontend.show_item', item_name=cfg.item_root) }}">
+                    <img class="img-circle" src="{{ '/static/logos/moinmoin.png' }}"/>
+                </a>
+                {% endif %}
+            </div>
+            <div class="col-lg-10">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="navbar moin-navbar-inverse">
+                            <div class="col-lg-9">
                         <ul class="nav navbar-nav pull-right">
 
                             {% if user.valid -%}
@@ -84,8 +86,8 @@
                             {%- endif %}
 
                         </ul>
-                    </div> <!-- subcol-lg-7 user login -->
-                    <div class="col-lg-3">
+                            </div> <!-- subcol-lg-7 user login -->
+                            <div class="col-lg-3">
                         <form class="navbar-form pull-right" action="{{ url_for('frontend.search') }}" method="get">
                             <div class="input-group">
                                 <input name='q' type="text" class="form-control" placeholder="Search ...">
@@ -94,9 +96,58 @@
                                 </div>
                             </div>
                         </form>
-                    </div> <!-- subcol-search-->
-                </div> <!-- navbar-inverse-->
-            </div> <!-- col-lg-12 -->
+                            </div> <!-- subcol-search-->
+                        </div> <!-- navbar-inverse-->
+                    </div>
+                </div> <!-- row for top-navbar -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <ul class="moin-breadcrumb">
+                        {% set trail_items = theme_supp.path_breadcrumbs() %}
+                        {% if trail_items %}
+                            {% for wiki_name, item_name, item_href, exists, err in trail_items %}
+                              <li>
+                                {%- if wiki_name -%}
+                                    <a href="{{ item_href }}"{{ " " }}
+                                       title="{{ wiki_name }}"
+                                       class="{% if err %}moin-badinterwiki{% else %}moin-interwiki{% endif %}">
+                                       {{ item_name|shorten_item_name }}
+                                    </a>
+                                {%- else -%}
+                                    <a href="{{ url_for('frontend.show_item', item_name=item_name) }}"{{ " " }}
+                                       {% if not exists -%}class="moin-nonexistent"{%- endif -%}>
+                                       {{ item_name|shorten_item_name }}
+                                    </a>
+                                {%- endif %}
+                              </li>
+                            {% endfor %}
+                        {% endif %}
+
+                        <h4 class="moin-location-breadcrumb">
+                        {% for segment_name, segment_path, exists in theme_supp.location_breadcrumbs(item_name) -%}
+                        {% set url = url_for('frontend.show_item', item_name=segment_path) %}
+                            {% if not loop.first %}
+                            <small>/</small>
+                            {% endif %}
+                            {% if url != current_url %}
+                                <small>
+                            {% endif %}
+                            {% if title_name %}
+                                {{ title_name }}
+                            {% else %}
+                                <a href="{{ url }}" {% if not exists %}class="moin-nonexistent"{% endif %}>
+                                    {{ segment_name|shorten_item_name }}
+                                </a>
+                            {% endif %}
+                            {% if url != current_url %}
+                               </small>
+                            {% endif %}
+                        {% endfor %}
+                        </h4>
+                        </ul>
+                    </div>
+                </div>
+            </div> <!-- col-lg-10 -->            
         </div> <!-- row-topnavbar -->
 
         <div class="row">
@@ -111,7 +162,7 @@
                     {% endfor %}
                 </div>
             </div>
-        </div>
+        </div> <!-- moin-flash-message -->
 
         <div class="row">
             <div class="col-lg-2">
@@ -161,49 +212,7 @@
             </div><!--/span-->
 
             <div class="col-lg-10">
-                <ul class="moin-breadcrumb">
-                    {% set trail_items = theme_supp.path_breadcrumbs() %}
-                    {% if trail_items %}
-                        {% for wiki_name, item_name, item_href, exists, err in trail_items %}
-                          <li>
-                            {%- if wiki_name -%}
-                                <a href="{{ item_href }}"{{ " " }}
-                                   title="{{ wiki_name }}"
-                                   class="{% if err %}moin-badinterwiki{% else %}moin-interwiki{% endif %}">
-                                   {{ item_name|shorten_item_name }}
-                                </a>
-                            {%- else -%}
-                                <a href="{{ url_for('frontend.show_item', item_name=item_name) }}"{{ " " }}
-                                   {% if not exists -%}class="moin-nonexistent"{%- endif -%}>
-                                   {{ item_name|shorten_item_name }}
-                                </a>
-                            {%- endif %}
-                          </li>
-                        {% endfor %}
-                    {% endif %}
-
-                    <h4 class="moin-location-breadcrumb">
-                    {% for segment_name, segment_path, exists in theme_supp.location_breadcrumbs(item_name) -%}
-                    {% set url = url_for('frontend.show_item', item_name=segment_path) %}
-                        {% if not loop.first %}
-                        <small>/</small>
-                        {% endif %}
-                        {% if url != current_url %}
-                            <small>
-                        {% endif %}
-                        {% if title_name %}
-                            {{ title_name }}
-                        {% else %}
-                            <a href="{{ url }}" {% if not exists %}class="moin-nonexistent"{% endif %}>
-                                {{ segment_name|shorten_item_name }}
-                            </a>
-                        {% endif %}
-                        {% if url != current_url %}
-                           </small>
-                        {% endif %}
-                    {% endfor %}
-                    </h4>
-                </ul>
+                
 
                 {% block views %}
 
@@ -223,7 +232,7 @@
             </div><!--/row-->
 
             </div><!--/span-->
-        </div> <!--/row-->
+        </div> <!--/row sidebar, tabs, content - main-->
 
         {% block footer %}
         <div class="row">
