--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -64,11 +64,6 @@
 
 .moin-breadcrumb {
   .breadcrumb;
-  > li {
-    &+li:before {
-      content: "»"; // right angular brackets, custom separator
-    }
-  }
 }
 
 .moin-nav {
@@ -85,7 +80,7 @@
 }
 
 .moin-location-breadcrumb {
-  padding-top: 12px;
+  display: inline;
 }
 
 .moin-nonexistent {
