use footer background for list-itemheading background

--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4214,7 +4214,7 @@ td.visible-print {
   padding-top: 20px;
 }
 .moin-list-heading {
-  background-color: #dcdcdc;
+  background-color: #eeeeee;
 }
 .moin-flash {
   padding: 15px 35px 15px 15px;
