uses font-variant small-caps for list-item-heading

--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4215,6 +4215,7 @@ td.visible-print {
 }
 .moin-list-heading {
   background-color: #eeeeee;
+  font-variant: small-caps;
 }
 .moin-flash {
   padding: 15px 35px 15px 15px;
