Adds active states for links in top navbar, also adds a hyperlink macro

--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4520,6 +4520,9 @@ td.visible-print {
 .moin-navbar-inverse .navbar-nav > li > a {
   color: #c8ddf1;
 }
+.moin-navbar-inverse .navbar-nav > li > a.active {
+  color: #ffffff;
+}
 .moin-navbar-inverse .navbar-text {
   color: #c8ddf1;
 }
