--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -104,6 +104,9 @@
     > li > a {
       color: @moin-navbar-inverse-textcolor;
     }
+    > li > a.active {
+      color: @navbar-inverse-link-hover-color;
+    }
   }
   .navbar-text {
     color: @moin-navbar-inverse-textcolor;
